--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             <article>
                 <h3>The Reviewer</h3>
                 <p>Luís Felipe is known to share and play various games with his friends,
-                    he believe that a true gamer plays everything and give his heart to this art.</p>
-                <p>Get yourself ready to board in this adventure and live many other lifes with videogames!
-                    Playing games since 7's, he loves to share all tips to beat the game with all achievements.</p>
+                    he believe that a true gamer plays everything and give his heart to this art.
+                    Get yourself ready to board in this adventure and live many other lifes with videogames!</p>
+                <p>Playing games since 7's, he loves to share all tips to beat the game with all achievements.</p>
             </article><br><br><br><br>
             <div id="excelsior">
                 Excelsior code 🪐 by Luís Felipe
@@ -82,3 +82,4 @@
     Font       - https://www.dafont.com/sf-pixelate.font
     Thanks!
 -->
+</html>
