--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css" type="text/css">
+    <!-- Joystick icon -->
     <link rel="icon" href="./assets/icon.png" type="image/png">
+    <!-- PT mono font source -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Mono&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
@@ -13,23 +15,25 @@
 </head>
 
 <body>
-
+    <!-- The whole page container -->
     <div class="container">
         <header>
             <h1 class="title">JOIN ME TO REDISCOVER AMAZING GAMES</h1>
         </header>
 
         <section>
+            <!-- Form container -->
             <div class="formcontainer">
                 <h2 class="mb">TIRED OF "DON'T HAVE ANYTHING TO PLAY" EVEN WITH THE LIBRARY
                     FULL OF GAMES?</h2>
                 <main class="mb">
-                    <p>In this newsletter you will receive the best reviews of your favorite genre
-                        to make you blow the dust of your cartridge and play from old classics
-                        to brand new AAA and indie games.</p>
+                    <p>In this newsletter, you will receive the best reviews of your favorite genre
+                        to make you blow the dust from your cartridge and play from old classics
+                        to brand new AAA or indie games.</p>
                 </main>
+                <!-- Form integrated with MailChimp - essential to copy from your own embedded form (action, method, id, name, and target) -->
                 <form
-                    action="https://gmail.us14.list-manage.com/subscribe/post?u=0cdcac912bb7a56d5259c52a0&amp;id=77ab4f5103"
+                    action="https://gmail.us14.laist-manage.com/subscribe/post?u=0cdcac912bb7a56d5259c52a0&amp;id=77ab4f5103"
                     method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
                     target="_blank" novalidate>
                     <input type="text" name="NAME" placeholder="Name"><br>
@@ -48,7 +52,7 @@
                         <option value="STR">Strategy</option>
                         <option value="SPT">Sports</option>
                     </select><br>
-                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <!-- essential - real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
                             name="b_0cdcac912bb7a56d5259c52a0_77ab4f5103" tabindex="-1" value=""></div>
                     <input type="submit" name="SUBMIT" value="START">
@@ -57,14 +61,17 @@
         </section>
 
         <footer>
+            <!--Pixelated picture-->
             <img id="pic" src="./assets/pic.png">
+            <!--About the reviewer-->
             <article>
                 <h3>The Reviewer</h3>
-                <p>Luís Felipe is known to share and play various games with his friends,
-                    he believe that a true gamer plays everything and give his heart to this art.
-                    Get yourself ready to board in this adventure and live many other lifes with videogames!</p>
-                <p>Playing games since 7's, he loves to share all tips to beat the game with all achievements.</p>
+                <p>Luís Felipe is known to share and play various games with his friends.
+                    He believes that a true gamer plays everything and gives his heart to this art.
+                    Get yourself ready to board this adventure and live many other lives with video games!</p>
+                <p>Playing games since 7's, he loves to share all tips to beat the game with all the achievements.</p>
             </article><br><br><br><br>
+            <!--Page author-->
             <div id="excelsior">
                 Excelsior code 🪐 by Luís Felipe
             </div>
@@ -73,13 +80,17 @@
     </div>
 
 </body>
+
 <!--
     Assets Copyright: 
-    Icon       - <a target="_blank" href="https://icons8.com/icon/DlwDFJwNrlzs/joystick">Joystick</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
-    Background - https://unsplash.com/photos/zpxKdH_xNSI?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink
-    Arrow      - <a target="_blank" href="https://icons8.com/icon/52510/divisa-para-baixo">Divisa para baixo</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
-    Picture    - @bumblie_ and my love that made me this one
-    Font       - https://www.dafont.com/sf-pixelate.font
+
+        Icon       - <a target="_blank" href="https://icons8.com/icon/DlwDFJwNrlzs/joystick">Joystick</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+        Background - https://unsplash.com/photos/zpxKdH_xNSI?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink
+        Arrow      - <a target="_blank" href="https://icons8.com/icon/52510/divisa-para-baixo">Divisa para baixo</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+        Picture    - @bumblie_ and my love that made me this one
+        Font       - https://www.dafont.com/sf-pixelate.font
+
     Thanks!
 -->
+
 </html>
