--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                         to brand new AAA or indie games.</p>
                 </main>
                 <!-- Form integrated with MailChimp - essential to copy from your own embedded form (action, method, id, name, and target) -->
-                <form
-                    action="https://gmail.us14.laist-manage.com/subscribe/post?u=0cdcac912bb7a56d5259c52a0&amp;id=77ab4f5103"
-                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-                    target="_blank" novalidate>
+                <form method="post"
+                    action="https://github.us8.list-manage.com/subscribe/post?u=4dc6211cd87f9c166a7a6de68&amp;id=84498224ef"
+                    id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank"
+                    novalidate>
                     <input type="text" name="NAME" placeholder="Name"><br>
                     <input type="email" name="EMAIL" placeholder="E-mail"><br>
                     <select name="GENRE">
@@ -52,9 +52,9 @@
                         <option value="STR">Strategy</option>
                         <option value="SPT">Sports</option>
                     </select><br>
-                    <!-- essential - real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-                            name="b_0cdcac912bb7a56d5259c52a0_77ab4f5103" tabindex="-1" value=""></div>
+                            name="b_4dc6211cd87f9c166a7a6de68_84498224ef" tabindex="-1" value=""></div>
                     <input type="submit" name="SUBMIT" value="START">
                 </form>
             </div>
